fix: a bug in network transfer fixed